update start print to home while pre-heating

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -195,32 +195,42 @@ screw_thread: CCW-M4
 description: Macro run at the start of a print
 gcode:
     M117 Starting print...
-    M104 S{params.EXTRUDER}
-    M140 S{params.BED}
-    M190 S{params.BED}
-    M109 S{params.EXTRUDER}
 
-    G90 ; absolute positioning
-    G28 ; home all axes
-    G92 E0 ; reset extruder
-    G1 Z2.0 F3000 ; lift nozzle
-    G1 X5.1 Y20 Z0.3 F5000.0 ; move to prime line start
-    G1 X5.1 Y100.0 Z0.3 F1500.0 E15 ; draw prime line
-    G1 X5.4 Y100.0 Z0.3 F5000.0 ; wipe
-    G92 E0 ; reset extruder again
+    M104 S{params.EXTRUDER}             ; start heating hotend (non-blocking)
+    M140 S{params.BED}                  ; start heating bed (non-blocking)
+
+    G90                                 ; absolute positioning
+    G28                                 ; home all axes
+
+    G1 Z2.0 F300                        ; lift nozzle
+    M190 S{params.BED}                  ; wait for bed to reach temp
+    G1 X5.1 Y20 Z2 F500                 ; move to prime line start while hotend is still heating
+    M109 S{params.EXTRUDER}             ; wait for nozzle to reach temp
+    G1 X5.1 Y20 Z0.3 F100               ; lower nozzle to bed
+
+    G92 E0                              ; reset extruder
+    G1 X5.1 Y100.0 Z0.3 F1500.0 E15     ; draw prime line
+    G1 X5.4 Y100.0 Z0.3 F5000.0         ; wipe move
+    G92 E0                              ; final extruder reset
 
 [gcode_macro PRINT_END]
 description: Macro run at the end of a print
 gcode:
-    M400 ; wait for all moves to finish
-    M104 S0 ; turn off hotend
-    M140 S0 ; turn off bed
-    G91 ; relative positioning
-    G1 E-3 F300 ; retract
-    G1 Z10 F3000 ; lift Z
-    G90 ; absolute positioning
-    G1 X0 Y220 F3000 ; park nozzle
-    M84 ; disable motors
+    M400                          ; Wait for all moves to finish
+    # M106 S0                       ; Turn off part cooling fan
+
+    M140 S0                       ; Turn off bed heat
+    G91                           ; Relative positioning
+    G1 Z10 F3000                  ; Lift nozzle
+    G1 E-3 F300                   ; Retract filament slightly
+    G90                           ; Absolute positioning
+    G1 X0 Y220 F3000              ; Park head
+
+    G4 S30                        ; Wait 30 seconds before turning off hotend
+    M104 S0                       ; Turn off hotend
+
+    # M117 Print complete           ; Display message on screen
+    M84                           ; Disable steppers
 
 [gcode_macro FILAMENT_CHANGE] 
 description: Filament change
