forgot to comment line

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -194,7 +194,7 @@ screw_thread: CCW-M4
 [gcode_macro PRINT_START]
 description: Macro run at the start of a print
 gcode:
-    M117 Starting print...
+    # M117 Starting print...
 
     M104 S{params.EXTRUDER}             ; start heating hotend (non-blocking)
     M140 S{params.BED}                  ; start heating bed (non-blocking)
