--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -203,8 +203,8 @@ gcode:
     G28                                 ; home all axes
 
     G1 Z2.0 F300                        ; lift nozzle
+    G1 X5.1 Y20 Z2 F500                 ; move to prime line start while still heating
     M190 S{params.BED}                  ; wait for bed to reach temp
-    G1 X5.1 Y20 Z2 F500                 ; move to prime line start while hotend is still heating
     M109 S{params.EXTRUDER}             ; wait for nozzle to reach temp
     G1 X5.1 Y20 Z0.3 F100               ; lower nozzle to bed
 
@@ -256,6 +256,23 @@ pin: PB0
 [exclude_object]
 
 [include prtouch.cfg]
+
+[gcode_macro _CLIENT_VARIABLE]
+# Use the same park for PAUSE and CANCEL
+variable_use_custom_pos   : True
+variable_custom_park_x    : 0.0
+variable_custom_park_y    : 220.0
+variable_custom_park_dz   : 25.0   # lift Z by 10 mm before moving
+
+# Explicitly enable park-on-cancel and set coords
+variable_park_at_cancel   : True
+variable_park_at_cancel_x : 0.0
+variable_park_at_cancel_y : 220.0
+
+# Retract amount on cancel (mm)
+variable_cancel_retract   : 5.0
+gcode: # no G-code, variables only
+
 [include mainsail.cfg]
 
 [e3v3se_display]
