--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -196,21 +196,31 @@ description: Macro run at the start of a print
 gcode:
     # M117 Starting print...
 
-    M104 S{params.EXTRUDER}             ; start heating hotend (non-blocking)
-    M140 S{params.BED}                  ; start heating bed (non-blocking)
+    {% set bed_temp = params.BED|default(60)|float %}
+    {% set extruder_temp = params.EXTRUDER|default(200)|float %}
+    {% set extruder_preheat = 140 %}    ; hotend preheat temp (to prevent oozing during calibration)
+
+    M140 S{bed_temp}                    ; start heating bed (non-blocking)
+    M104 S{extruder_preheat}            ; start preheating hotend (non-blocking)
 
     G90                                 ; absolute positioning
     G28                                 ; home all axes
 
+    M190 S{bed_temp}                    ; wait for bed to reach temp
+    BED_MESH_CLEAR                      ; clear current bed mesh
+    BED_MESH_CALIBRATE                  ; probe bed while at print temp
+    BED_MESH_OUTPUT                     ; print bed mesh to console (for testing)
+
+    M104 S{extruder_temp}               ; start heating hotend to print temp (non-blocking)
     G1 Z2.0 F300                        ; lift nozzle
     G1 X5.1 Y20 Z2 F500                 ; move to prime line start while still heating
-    M190 S{params.BED}                  ; wait for bed to reach temp
-    M109 S{params.EXTRUDER}             ; wait for nozzle to reach temp
+
+    M109 S{extruder_temp}               ; wait for hotend to reach temp
     G1 X5.1 Y20 Z0.3 F100               ; lower nozzle to bed
 
     G92 E0                              ; reset extruder
-    G1 X5.1 Y100.0 Z0.3 F1500.0 E15     ; draw prime line
-    G1 X5.4 Y100.0 Z0.3 F5000.0         ; wipe move
+    G1 X5.0 Y100.0 Z0.3 F1500.0 E15     ; draw prime line
+    G1 X10.0 Y100.0 Z0.3 F5000.0        ; wipe move
     G92 E0                              ; final extruder reset
 
 [gcode_macro PRINT_END]
@@ -291,3 +301,22 @@ enable_force_move: true
 #*#
 #*# [bltouch]
 #*# z_offset = 1.537
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.122500, 0.112500, 0.067500, -0.005000, -0.085000
+#*# 	  0.152500, 0.097500, 0.050000, -0.040000, -0.160000
+#*# 	  0.107500, 0.002500, -0.012500, -0.107500, -0.215000
+#*# 	  0.025000, -0.082500, -0.100000, -0.180000, -0.260000
+#*# 	  0.022500, -0.190000, -0.185000, -0.255000, -0.317500
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# max_x = 207.0
+#*# min_y = 30.0
+#*# max_y = 215.48000000000002
